--- a/index.html
+++ b/index.html
@@ -1,3 +1,41 @@
-<p>hola mundo</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Planet Weight</title>
+    <link rel="icon" href="data/icon/icono.ico">
+    <meta name="description" content="¡¡ Descubre tu peso en otro planeta ya !! ">
+    <meta name="keywords" content="Intriga , Gran curiosidad , planetas">
+    <meta name="author" content=" Lapp Lucas Daniel ">
+    <meta name="robots" content="index" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="data/index/css/idnex.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+    <div class="conteiner">
+        <div class="loader"><p> ¿ Nunca te has preguntado ... </p></div>
+        <div class="loader_dos"><p> ...cuánto pesarias en otro planeta ? </p></div>
+        <div class="loader_tres"><p> Presenta: Studios Spectrum...</p></div>
 
-<p>Lucas Daniel Lapp</p>
+    </div>
+    <header>
+        <div class="planetas"></div>
+        <br>
+        <div class="Nombre_planeta"></div>
+        <br>
+            <div class="botones">
+            <button class="atras" id="botones"><</button>
+            <button class="adelante" id="botones">></button>
+            </div>
+        <section class="data">
+            <h1>¿ Qué peso tendrías en cada planeta ?</h1>
+            <input type="text" placeholder="peso usuario" class="peso_usuario" maxlength="2">
+            <br>
+            <br>
+            <button class="calcular">calcular</button>
+            <div class="resultado"></div></section>
+    </header>
+    <script src="data/index/javascript/index.js"></script>
+</body>
+</html>
