Poniendo mi nombre actual

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="conteiner">
         <div class="loader"><p> ¿ Nunca te has preguntado ... </p></div>
         <div class="loader_dos"><p> ...cuánto pesarias en otro planeta ? </p></div>
-        <div class="loader_tres"><p> Presenta: Studios Spectrum...</p></div>
+        <div class="loader_tres"><p> Presenta: Lapp Lucas Daniel...</p></div>
 
     </div>
     <header>
