logicPlanet y index se debe seguir su correcta concecion

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="data/index/css/idnex.css" rel="stylesheet" type="text/css">
+    <link href="data/css/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div class="conteiner">
@@ -32,10 +32,11 @@
             <h1>¿ Qué peso tendrías en cada planeta ?</h1>
             <input type="text" placeholder="peso usuario" class="peso_usuario" maxlength="2">
             <br>
-            <br>
+            <br> 
+            <div class="resultado"></div>
             <button class="calcular">calcular</button>
-            <div class="resultado"></div></section>
+         </section>
     </header>
-    <script src="data/index/javascript/index.js"></script>
+    <script src="data/js/index.js" type="module"></script>
 </body>
 </html>
