removindo un div x supuestamente

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             <button class="atras" id="botones"><</button>
             <button class="adelante" id="botones">></button>
             </div>
-        <section class="data">
+        <form class="data">
             <h1>¿ Qué peso tendrías en cada planeta ?</h1>
             <input type="text" placeholder="peso usuario" class="peso_usuario" maxlength="3">
             <br>
             <br> 
             <div class="resultado"></div>
             <button class="calcular">calcular</button>
-         </section>
+         </form>
     </header>
     <script src="data/js/index.js" type="module"></script>
 </body>
