cambiando las clss por id

--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
         <div class="loader"><p> ¿ Nunca te has preguntado ... </p></div>
         <div class="loader_dos"><p> ...cuánto pesarias en otro planeta ? </p></div>
         <div class="loader_tres"><p> Presenta: Lapp Lucas Daniel...</p></div>
-
     </div>
     <header>
-        <div class="planetas"></div>
+        <div id="planet"></div>
         <br>
-        <div class="Nombre_planeta"></div>
+        <div id="name_planet"></div>
         <br>
             <div class="botones">
-            <button class="atras" id="botones"><</button>
-            <button class="adelante" id="botones">></button>
+                 <button class="atras" id="botones"><</button>
+                 <button class="adelante" id="botones">></button>
             </div>
         <form class="data">
             <h1>¿ Qué peso tendrías en cada planeta ?</h1>
@@ -34,7 +33,7 @@
             <br>
             <br> 
             <div class="resultado"></div>
-            <button class="calcular">calcular</button>
+            <button type="button"class="calcular">calcular</button>
          </form>
     </header>
     <script src="data/js/index.js" type="module"></script>
