--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 </head>
 <body>
     <div class="conteiner">
-        <div class="loader"><p> ¿ Nunca te has preguntado ... </p></div>
-        <div class="loader_dos"><p> ...cuánto pesarias en otro planeta ? </p></div>
-        <div class="loader_tres"><p> Presenta: Lapp Lucas Daniel...</p></div>
+        <div id="loader-container">
+        <div id="loader"></div> 
+        <p class="cargando">Cargando...</p>
+    </div>
     </div>
     <header>
         <div id="planet"></div>
@@ -36,6 +37,7 @@
             <button type="button"class="calcular">calcular</button>
          </form>
     </header>
+    <!--Datos con chat gtp--->
     <script src="data/js/index.js" type="module"></script>
 </body>
 </html>
