--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 </head>
 <body>
     <div class="conteiner">
-        <div id="loader-container">
-        <div id="loader"></div> 
-        <p class="cargando">Cargando...</p>
-    </div>
+        <div class="cargando"><p>¿ Sabias que los aliens existen ?</p></div>
     </div>
     <header>
         <div id="planet"></div>
