--- a/index.html
+++ b/index.html
@@ -70,11 +70,34 @@
                     <li><a href="#Info">Info</a></li>
                 </ul>
             </nav>
-            <h2>¿ Quierés saber más ?</h2>
+            <h2>¿ Ovnis ?</h2>
             <p>Dentro de los informes clasificados sobre encuentros con ovnis, existe uno que describe luces intermitentes en el cielo, las cuales, según algunos testigos, responden a patrones de comunicación que aún no hemos logrado descifrar. Aterradora incertidumbre rodea la posibilidad de que haya mensajes desconocidos entre nosotros y ellos, justo encima de nuestras cabezas."🛸</p>
-            <button type="button" class="new-date">Generar</button>
+        </section>
+        <section id="Planetas">
+            <article class="arPlaneta">
+                <h3>Datos curiosos de los planetas</h3>
+                <!--Dinamico con js-->
+                <div id="info-planet"></div>
+            </article>
+            <div class="cont-planet">
+                <img src="data/img/infoPlanet.webp" alt="Planeta-Tierra">
+            </div>
         </section>
    </main>
+   <footer id="Info">
+       <ul>
+           <li><a href="correo"><img src="data/img/correo.png" alt="corre-electronico-img" class="correo-icono" id="icono"></a></li>
+           <li><a href="Linkedin"><img src="data/img/linkedin.png" alt="linkedin-img" class="linkedin-icono" id="icono"></a></li>
+           <li><a href="Instagram"><img src="data/img/instagram.png" alt="instagram-img" class="instagram-icono" id="icono"></a></li>
+           <li><a href="Facebook"><img src="data/img/facebook.png" alt="facebook-img" class="facebook-icono" id="icono"></a></li>
+           <li><a href="X"><img src="data/img/x.png" alt="x-img" class="x-icono" id="icono"></a></li>
+       </ul>
+    <h4>//Gracias por llegar hasta aquí</h4>
+    <p>Desarrollador: Lapp Lucas Daniel</p>
+    <p>Correo:daniellapp2010@gmail.com</p>
+    <p>Si te gusto y queres saber más sobre todo lo que vamos desallorando, puedes seguirnos en <a href="">Instagram</a>,<a href="">Linkedin</a> si     quieres ver el código de la página te invito a ver mi <a href="">Github</a>.</p>
+    <p>Como simepre, todo mi aprecio para <a href="https://www.flaticon.es/autores/manglayang-studio">manglayang studio></a>,<a href="https://www.freepik.com/"> Freepik</a><a href="https://www.flaticon.es/autores/smashicons">Smashicons</a>por tomarse la molestia de desrrollar alguno de los iconos utilizados en esta web.</p>
+   </footer>
    <!--js native-->
     <script src="data/js/index.js" type="module"></script>
     <script src="data/bootstrap/js/bootstrap.min.js"></script> 
