--- a/index.html
+++ b/index.html
@@ -87,17 +87,16 @@
    </main>
    <footer id="Info">
        <ul>
-           <li><a href="correo"><img src="data/img/correo.png" alt="corre-electronico-img" class="correo-icono" id="icono"></a></li>
-           <li><a href="Linkedin"><img src="data/img/linkedin.png" alt="linkedin-img" class="linkedin-icono" id="icono"></a></li>
-           <li><a href="Instagram"><img src="data/img/instagram.png" alt="instagram-img" class="instagram-icono" id="icono"></a></li>
-           <li><a href="Facebook"><img src="data/img/facebook.png" alt="facebook-img" class="facebook-icono" id="icono"></a></li>
-           <li><a href="X"><img src="data/img/x.png" alt="x-img" class="x-icono" id="icono"></a></li>
+           <li><a href="https://www.linkedin.com/in/lucas-daniel-lapp-b24954242/" target="_blank"><img src="data/img/linkedin.png" alt="linkedin-img" class="linkedin-icono" id="icono"></a></li>
+           <li><a href="https://www.instagram.com/rtx_lapp/" target="_blank"><img src="data/img/instagram.png" alt="instagram-img" class="instagram-icono" id="icono"></a></li>
+           <li><a href="https://www.facebook.com/Lucas.Daniel.Lapp/" target="_blank"><img src="data/img/facebook.png" alt="facebook-img" class="facebook-icono" id="icono"></a></li>
+           <li><a href="https://twitter.com/Daniel98069862" target="_blank"><img src="data/img/x.png" alt="x-img" class="x-icono" id="icono"></a></li>
        </ul>
     <h4>//Gracias por llegar hasta aquí</h4>
     <p>Desarrollador: Lapp Lucas Daniel</p>
     <p>Correo:daniellapp2010@gmail.com</p>
-    <p>Si te gusto y queres saber más sobre todo lo que vamos desallorando, puedes seguirnos en <a href="">Instagram</a>,<a href="">Linkedin</a> si     quieres ver el código de la página te invito a ver mi <a href="">Github</a>.</p>
-    <p>Como simepre, todo mi aprecio para <a href="https://www.flaticon.es/autores/manglayang-studio">manglayang studio></a>,<a href="https://www.freepik.com/"> Freepik</a><a href="https://www.flaticon.es/autores/smashicons">Smashicons</a>por tomarse la molestia de desrrollar alguno de los iconos utilizados en esta web.</p>
+    <p>¡Si te encantó nuestra página y te gustaría tener una personalizada para tu empresa o negocio, contáctanos! Adaptamos nuestros servicios a tu presupuesto. En menos de una semana, podrás disfrutar de tu nueva página web, mejorando significativamente la visibilidad de tu empresa en el mercado. Pero eso no es todo, ¡te ofrecemos mantenimiento gratuito durante el primer mes! ¡Esperamos tu mensaje para empezar a trabajar juntos!.</p>
+    <p>Como simepre, todo mi aprecio para <a href="https://www.flaticon.es/autores/manglayang-studio">manglayang studio></a>,<a href="https://www.freepik.com/"> Freepik</a><a href="https://www.flaticon.es/autores/smashicons">Smashicons</a> por tomarse la molestia de desrrollar alguno de los iconos utilizados en esta web.</p>
    </footer>
    <!--js native-->
     <script src="data/js/index.js" type="module"></script>
