--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <p>Desarrollador: Lapp Lucas Daniel</p>
     <p>Correo:daniellapp2010@gmail.com</p>
     <p>¡Si te encantó nuestra página y te gustaría tener una personalizada para tu empresa o negocio, contáctanos! Adaptamos nuestros servicios a tu presupuesto. En menos de una semana, podrás disfrutar de tu nueva página web, mejorando significativamente la visibilidad de tu empresa en el mercado. Pero eso no es todo, ¡te ofrecemos mantenimiento gratuito durante el primer mes! ¡Esperamos tu mensaje para empezar a trabajar juntos!.</p>
-    <p>Como simepre, todo mi aprecio para <a href="https://www.flaticon.es/autores/manglayang-studio">manglayang studio></a>,<a href="https://www.freepik.com/"> Freepik</a><a href="https://www.flaticon.es/autores/smashicons">Smashicons</a> por tomarse la molestia de desrrollar alguno de los iconos utilizados en esta web.</p>
+    <p>Como simepre, todo mi aprecio para <a href="https://www.flaticon.es/autores/manglayang-studio">manglayang studio</a>,<a href="https://www.freepik.com/"> Freepik</a><a href="https://www.flaticon.es/autores/smashicons">Smashicons</a> por tomarse la molestia de desrrollar alguno de los iconos utilizados en esta web.</p>
    </footer>
    <!--js native-->
     <script src="data/js/index.js" type="module"></script>
