--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" rel="stylesheet">
-    <!--Boostrap-->
+    <!--Bootsrap-->
     <link href="data/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="data/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!--css native-->
